<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="SignUp_tieConfirmPassword_hint">Confirm password</string>
    <string name="SignUp_tieEmail_hint">Email</string>
    <string name="SignUp_tiePassword_hint">Password</string>

    <string name="acceptLinks">Accept</string>

    <string name="add_event">Add event</string>

    <string name="app_name" translatable="false">MusicalEvents</string>

    <string name="btAlreadyAccount">Do yo have an account?</string>

    <string name="btSignIn_text">Sign in</string>

    <string name="btSignUp_text">Sign up</string>

    <string name="calendar">Calendar</string>

    <string name="chkRemember">Remember me</string>

    <string name="delete_succeded">Event deleted successfuly</string>

    <string name="edit_event">Edit event</string>

    <string name="edited_event">Event updated successfuly</string>

    <string name="errUserEmpty">Empty user</string>
    <string name="error_password_dont_match">Passwords dont match</string>

    <string name="errorPasswordEmpty">Empty password</string>

    <string name="error_EmailEmpty">Empty email</string>
    <string name="error_badLink">Invalid link</string>
    <string name="error_createUser">Error creating user</string>
    <string name="error_date">The end date must be later than the start date</string>
    <string name="error_email">Invalid email</string>
    <string name="error_empty_eventDate">Empty date</string>
    <string name="error_empty_eventDescription">Empty description</string>
    <string name="error_empty_eventHour">Empty hour</string>
    <string name="error_empty_eventLocation">Empty location</string>
    <string name="error_empty_eventName">Empty event name</string>
    <string name="error_facebooknotfound">Facebook not found</string>
    <string name="error_instagramnotfound">Instragam not found</string>
    <string name="error_passwordFormat">Password must contain uppercase, lowercase and numbers</string>
    <string name="error_twitternotfound">Twitter not found</string>
    <string name="error_userExists">User already exists</string>
    <string name="error_websitenotfound">Website not found</string>

    <string name="event_date">Date</string>
    <string name="event_description">Description</string>
    <string name="event_endHour">End hour</string>
    <string name="event_enddate">End date</string>
    <string name="event_info">Event info</string>
    <string name="event_location">Location</string>
    <string name="event_name">Event name</string>
    <string name="event_startdate">Start date</string>
    <string name="event_starthour">Start hour</string>
    <string name="event_updated_successfuly">Event updated successfuly</string>

    <string name="facebook" translatable="false">Facebook</string>

    <string name="group_info">Social links</string>
    <string name="group_links">Group links</string>
    <string name="group_name">Group name</string>

    <string name="instagram" translatable="false">Instagram</string>

    <string name="ivNodata">No data</string>

    <string name="my_events">My events</string>

    <string name="success_uploading_event">Event uploaded successfully</string>

    <string name="tiePassword">Password</string>

    <string name="tieUser">User</string>

    <string name="tvLogin_login" translatable="false">Login</string>

    <string name="tvTitleSignUp">Register</string>

    <string name="twitter" translatable="false">Twitter</string>

    <string name="updatedLinks">Links updated successfuly</string>

    <string name="website">Website</string>
    <string name="error_login">Incorrect user</string>
    <string name="sign_out">Sign out</string>
    <string name="about_us">About the creator</string>
    <string name="about_me">Hello! My name is Rafa and I am the developer behind this application. I am a Cross-platform application development student at Portada Alta. If you are a Media Manager in an musical association you can upload the next events your music group will perform indicating some relevant data. Normal users can share the events with them friends, link with Google Calendar and visit the social networks of the group</string>
    <string name="interesting_links">Interesting links</string>
    <string name="sendEmail">Send email</string>
    <string name="error_no_street">Street not found</string>
    <string name="welcome">Welcome</string>

    <string name="come_with_me">Come with me to see</string>
    <string name="_in">in</string>
    <string name="at">at</string>
    <string name="error_no_locality">Locality not found</string>
    <string name="error_googlecalendar">There is no app that support this action</string>
    <string name="profile">Profile</string>
    <string name="change_password">Change password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_password">Your password</string>
    <string name="new_password">New password</string>
    <string name="cancel">Cancel</string>
    <string name="not_your_password">Incorrect password</string>
    <string name="updated_password">Password updated succesfuly</string>
</resources>
