<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_color"
    android:orientation="vertical"
    android:paddingLeft="@dimen/_16dp"
    android:paddingTop="@dimen/_16dp"
    android:paddingRight="@dimen/_16dp"
    android:paddingBottom="@dimen/_16dp">

    <TextView
        style="@style/fragmentTitle"
        android:text="@string/tvLogin_login" />

    <!--ToDo crear estilos para los fallos en los til-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        app:boxStrokeColor="@color/transparent"
        app:boxStrokeWidth="@dimen/_0dp"
        app:boxStrokeWidthFocused="@dimen/_0dp"
        app:errorEnabled="false">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_til"
            android:hint="@string/SignUp_tieEmail_hint"
            android:inputType="textEmailAddress|textNoSuggestions" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        app:boxStrokeColor="@color/transparent"
        app:boxStrokeWidth="@dimen/_0dp"
        app:boxStrokeWidthFocused="@dimen/_0dp"
        app:endIconMode="password_toggle"
        app:errorEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiePassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_til"
            android:hint="@string/tiePassword"
            android:inputType="textPassword|textNoSuggestions" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/ckremember"
            android:layout_width="@dimen/_0dp"
            android:layout_weight="1"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:text="@string/chkRemember" />

        <Button
            android:id="@+id/btSignUp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bodoni_regular"
            android:text="@string/btSignUp_text"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <Button
        android:id="@+id/btSignIn"
        style="@style/button"
        android:layout_marginTop="@dimen/_0dp"
        android:text="@string/btSignIn_text" />


</LinearLayout>