<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_color"
    tools:context="signup.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_margin="20dp"
        android:layout_marginBottom="50dp">

        <TextView
            android:id="@+id/tvTitleSignUp"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/bodoni_bold"
            android:text="@string/tvTitleSignUp"
            android:textColor="@color/black"
            android:textSize="@dimen/login_tvLogin_textSize"
            android:visibility="visible"
            app:layout_constraintEnd_toStartOf="@+id/gdEnd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUser"
            style="@style/RegisterTextInputLayout"
            app:layout_constraintTop_toBottomOf="@id/tvTitleSignUp"
            app:startIconDrawable="@drawable/ic_tiluser_person">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_til"
                android:hint="@string/tieUser" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            style="@style/RegisterTextInputLayout"
            android:layout_marginTop="32dp"
            app:startIconDrawable="@drawable/ic_action_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions|textEmailAddress"
                android:background="@drawable/background_til"
                android:hint="@string/SignUp_tieEmail_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/RegisterTextInputLayout"
            app:endIconMode="password_toggle"
            app:layout_constraintTop_toBottomOf="@id/tilEmail"
            app:startIconDrawable="@drawable/ic_action_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_til"
                android:hint="@string/SignUp_tiePassword_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilConfirmPassword"
            style="@style/RegisterTextInputLayout"
            app:endIconMode="password_toggle"
            app:layout_constraintTop_toBottomOf="@id/tilPassword"
            app:startIconDrawable="@drawable/ic_action_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_til"
                android:hint="@string/SignUp_tieConfirmPassword_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_gravity="center_horizontal"
            android:id="@+id/btAlreadyAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/bodoni_semibold"
            android:textColor="@color/black"
            android:backgroundTint="@color/transparent"
            android:text="@string/btAlreadyAccount"
            android:textAllCaps="false"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilConfirmPassword"/>

        <Button
            android:layout_gravity="center_horizontal"
            android:id="@+id/btRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bodoni_bold"
            android:textColor="@color/white"
            android:background="@drawable/background_blue_button"
            android:padding="10dp"
            android:text="@string/btSignUp_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilConfirmPassword"
            android:layout_marginBottom="50dp"/>
    </LinearLayout>
</ScrollView>