<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryColor"
    tools:context=".adminUser.fragment.AddEventFragment">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/bodoni_bolditalic"
            android:gravity="center"
            android:text="@string/edit_event"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/InfoEventTextView"
            android:layout_marginTop="30dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTieNombreEvento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_til"
                android:hint="@string/event_name" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/InfoEventTextView"
            android:layout_marginTop="20dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTieUbicacionEvento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_til"
                android:hint="@string/event_location" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/InfoEventTextView"
            android:layout_marginTop="20dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTieFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_til"
                android:clickable="true"
                android:drawableEnd="@drawable/ic_calendar"
                android:focusable="false"
                android:hint="@string/event_date"
                android:inputType="date"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/InfoEventTextView"
            android:layout_marginTop="20dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTieHoraComienzoEvento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_til"
                android:clickable="true"
                android:drawableEnd="@drawable/ic_hour_event"
                android:focusable="false"
                android:hint="@string/event_starthour" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/InfoEventTextView"
            android:layout_marginTop="20dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTieHoraFinEvento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_til"
                android:clickable="true"
                android:drawableEnd="@drawable/ic_hour_event"
                android:focusable="false"
                android:hint="@string/event_endHour" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/InfoEventTextView"
            android:layout_marginTop="20dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTieDescripcionEvento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_til"
                android:hint="@string/event_description" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabEditEvento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="60dp"
            android:backgroundTint="@color/primaryColor"
            android:contentDescription="@string/edit_event"
            android:foregroundTint="@color/white"
            android:src="@drawable/ic_add_event_white"
            tools:ignore="SpeakableTextPresentCheck" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>

