<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_color">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvYours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginTop="@dimen/_20dp"
            android:fontFamily="@font/bodoni_bolditalic"
            android:text="@string/your_password"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/_20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_your_password"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_20dp"
            app:endIconMode="password_toggle"
            android:layout_marginTop="@dimen/_5dp"
            style="@style/RegisterTextInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvYours">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_your_password"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:background="@drawable/background_til"
                android:hint="@string/your_password"
                android:inputType="textPassword|textNoSuggestions" />
        </com.google.android.material.textfield.TextInputLayout>


        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_20dp"
            android:background="@color/primary_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_your_password" />

        <TextView
            android:id="@+id/tvNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginTop="@dimen/_20dp"
            android:fontFamily="@font/bodoni_bolditalic"
            android:text="@string/new_password"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/_20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separator" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_20dp"
            app:endIconMode="password_toggle"
            android:layout_marginTop="@dimen/_5dp"
            style="@style/RegisterTextInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNewPassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_new_password"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:background="@drawable/background_til"
                android:hint="@string/new_password"
                android:inputType="textPassword|textNoSuggestions" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_confirm_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_20dp"
            app:endIconMode="password_toggle"
            android:layout_marginTop="@dimen/_20dp"
            style="@style/RegisterTextInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_new_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_confirm_new_password"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:background="@drawable/background_til"
                android:hint="@string/SignUp_tieConfirmPassword_hint"
                android:inputType="textPassword|textNoSuggestions" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_confirm_new_password">

            <Button
                android:id="@+id/btn_change"
                style="@style/button"
                android:layout_weight="1"
                android:text="@string/acceptLinks"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_cancel"
                style="@style/button"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:layout_height="wrap_content" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>